# robot_qec

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: 01-reference-architecture.md  02-grounding-experiments.md  03-qudit-extension-scope.md  04-implementation-roadmap.md  05-arbitrary-dimension-crt.md  06-qudit-literature.md  07-magic-state-distillation-scope.md  08-distillation-arm-and-universality.md
literature/: README.md
qudit_qec/: README.md  __init__.py  construct.py  crt.py  distance.py  distance_milp.py  distance_qudit.py  distill_discovery.py  distill_strange.py  distillation.py  evaluator.py  field_utils.py  genotype.py  results.py  structure.py  universality.py
qudit_qec/evolve/: README.md  __init__.py  adapter.py  config_qudit.yaml  prompt_context_qudit.md  run_evolution.py  seed_solution_qudit.py
results/: distill_catalog.json  distill_report.md  distill_strange_catalog.json  distill_strange_report.md  gf3_catalog.json  gf3_known_codes.json  gf3_report.md
scripts/: discover.py  distill_discover.py  distill_strange_search.py  gf3_baseline_sweep.py
tests/: test_certify.py  test_construct.py  test_crt.py  test_distance.py  test_distill_discovery.py  test_distill_strange.py  test_distillation.py  test_evaluator.py  test_evolve_scaffold.py  test_field_utils.py  test_genotype.py  test_phase0_milestone.py  test_results.py  test_structure.py  test_universality.py
workflows/: README.md  qudit-qec-scope.js
