[project]
name = "robot-qec"
version = "0.1.0"
description = "LLM-guided discovery of qudit (GF(q)) quantum error-correcting codes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "qldpc",
    "galois",
    "numpy",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-igraph>=0.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qudit_qec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that build/verify codes (qldpc construction)",
]
